trunk/Archive2/f7/55aeb14c81278f/output
main.cpp:12:5: error: stray '\342' in program
     d = (a + b)/c + a/c – a+b/c * b;
     ^
main.cpp:12:5: error: stray '\200' in program
main.cpp:12:5: error: stray '\223' in program
main.cpp: In function 'int main()':
main.cpp:12:29: error: expected ';' before 'a'
     d = (a + b)/c + a/c – a+b/c * b;
                             ^
